adding Header component

--- a/src/style.css
+++ b/src/style.css
@@ -3,4 +3,19 @@ body {
   margin: 0;
   padding: 0;
   background-color: #979797;
+  height: 100%;
+  width: 100%;
 }
+
+#content { 
+  display: flex;
+  /* justify-content: center; */
+  /* align-items: center; */
+  
+  height: 100vh;
+  width: 100%;
+}
+
+/* Type=Mobile */
+
+/* Auto layout */
