--- a/src/style.css
+++ b/src/style.css
@@ -9,9 +9,9 @@ body {
 
 #content { 
   display: flex;
-  /* justify-content: center; */
-  /* align-items: center; */
-  
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   height: 100vh;
   width: 100%;
 }
