--- a/src/style.css
+++ b/src/style.css
@@ -2,18 +2,20 @@ body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #979797;
+  background-color: #F0F0F0;
   height: 100%;
   width: 100%;
 }
 
 #content { 
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
+  height: calc(100%);
   width: 100%;
+  gap: 20px;
+  margin-bottom: 80px;
 }
 
 /* Type=Mobile */
