--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,7 @@ body {
   height: calc(100%);
   width: 100%;
   gap: 20px;
-  margin-bottom: 80px;
+  margin-bottom: 80px;Header.tsx
 }
 
 /* Type=Mobile */
