--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,22 +1,22 @@
 header {
   background-color: white;
   width: 100%;
-  height: 80px;
+  height: 60px;
   display: flex;
   align-items: center;
-  box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.3)
+  box-shadow: 0px 2px 8px 0px #00000033;
 }
 
 h1 {
   width: 90%;
   height: 100%;
+  margin: 0 auto;
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  margin: 0 auto;
 }
 
 h1 img {
-  height: 34px;
   width: 44px;
+  height: 34px;
 }
