--- a/src/style.css
+++ b/src/style.css
@@ -5,17 +5,17 @@ body {
   background-color: #F0F0F0;
   height: 100%;
   width: 100%;
+  
+  overflow: hidden;
 }
 
-#content { 
+#root {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   flex-direction: column;
-  height: calc(100%);
+  height: 100%;
   width: 100%;
-  gap: 20px;
-  margin-bottom: 80px;Header.tsx
+  margin-bottom: 80px;
 }
 
 /* Type=Mobile */
