--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -14,13 +14,38 @@ thead {
 thead tr {
   color: white;
   text-transform: uppercase;
-  display: flex; 
+  display: grid; 
   margin: 0 auto;
-  justify-content: space-between; 
   align-items: center;
+  justify-content: space-between;
+  grid-template-columns: 1fr 1fr 1fr;
   width: 90%;
   height: 100%;
+  font-size: 16px;
 }
+
+thead tr th:first-child {
+  text-align: left;
+}
+
+thead tr th:last-child {
+  position: relative;
+  text-align: center;
+  height: 100%;
+}
+
+thead tr th:last-child::after {
+  content: '';
+  position: absolute;
+  height: 8px;
+  width: 8px;
+  border-radius: 50%;
+  right: 13.5px;
+  top: 50%;
+  transform: translate(0%, -50%);
+  background-color: white;
+}
+
 
 tbody {
   width: 100%;
@@ -123,3 +148,37 @@ tbody tr td img {
   border-bottom: 1px dotted rgba(223, 223, 223, 1);
 }
 
+.desktopDevice {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .desktopDevice {
+    display: block;
+  }
+
+  .mobileDevice {
+    display: none;
+  }
+
+  thead tr {
+    display: grid;
+    grid-template-columns: 0.6fr 0.9fr 0.8fr 1fr 1fr;
+    text-align: left;
+  }
+  
+  .tdContent {
+    display: grid;
+    grid-template-columns: 0.6fr 0.9fr 0.8fr 1fr 1fr;
+    align-items: center;
+  }
+
+  thead tr, tbody tr td {
+    width: 95%;
+  }
+
+  tbody tr[data-height="180px"] {
+    height: 60px;
+  }
+
+}
